--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_below="@id/tilUsername">
         <EditText
             android:id="@+id/etPassword"
@@ -48,6 +49,8 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="16dp"
         android:text="Log In"
+        android:textColor="@color/grey"
+        android:background="@drawable/btn_border"
         android:layout_below="@id/tilPassword"/>
 
     <ImageView
