--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="light_blue_500">#03A9F4</color>
     <color name="insta_pink">#B64674</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#80E2E2E2</color>
 </resources>
