--- a/app/src/main/res/drawable/btn_border.xml
+++ b/app/src/main/res/drawable/btn_border.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle" android:background="@android:color/transparent">
-            <stroke android:width="2dp" android:color="@color/grey"/>
+            <stroke android:width="2dp" android:color="@color/body_text"/>
         </shape>
     </item>
 </selector>
