--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:id="@+id/etUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white_80_transparent"
             android:hint="Username" />
     </android.support.design.widget.TextInputLayout>
 
@@ -38,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:textColor="@color/white_80_transparent"
             android:inputType="textPassword"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -62,5 +64,19 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp"
         app:srcCompat="@drawable/instagram"/>
+
+    <Button
+        android:id="@+id/btnSignUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blur_mask_tint_color"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:textColor="@color/white_80_transparent"
+        android:text="Don't have an account? Sign Up"
+        android:textAllCaps="false"/>
 
 </RelativeLayout>
