Gets the first 20 posts

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -28,7 +28,7 @@
     <ImageView
         android:id="@+id/ivImage"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_centerVertical="true"
         app:srcCompat="@drawable/ic_launcher_background" />
