--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -7,15 +7,28 @@
     android:background="@android:color/transparent"
     tools:context=".CameraFragment">
 
+    <ImageView
+        android:id="@+id/ivPhoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        android:visibility="gone"
+        app:srcCompat="@drawable/bg_gradient" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/tilDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
         android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp">
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+        android:layout_below="@id/ivPhoto">
 
         <EditText
             android:id="@+id/etDescription"
@@ -29,10 +42,13 @@
         android:id="@+id/btnCreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
-        android:text="Create"
-        android:layout_above="@id/btnPicture"/>
+        android:layout_marginBottom="60dp"
+        android:visibility="gone"
+        android:layout_below="@id/tilDescription"
+        android:text="Post"/>
 
     <Button
         android:id="@+id/btnPicture"
@@ -44,14 +60,5 @@
         android:layout_marginBottom="60dp"
         android:layout_centerHorizontal="true"
         android:text="Take Picture" />
-
-    <ImageView
-        android:id="@+id/ivPhoto"
-        android:layout_width="96dp"
-        android:layout_height="90dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        app:srcCompat="@drawable/bg_gradient" />
 
 </RelativeLayout>
