--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -11,8 +11,11 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignStart="@id/ivImage2"
+        android:layout_marginTop="5dp"
         android:layout_margin="5dp"
-        android:layout_above="@id/ivImage2"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_alignParentTop="true"
         app:srcCompat="@drawable/instagram_user"/>
 
     <TextView
@@ -29,18 +32,16 @@
 
     <ImageView
         android:id="@+id/ivImage2"
-        android:layout_width="379dp"
-        android:layout_height="368dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_below="@id/ivProfileImage2"
         android:layout_marginBottom="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:layout_alignParentStart="true"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/placeholder" />
 
     <TextView
         android:id="@+id/tvCaption2"
@@ -58,5 +59,4 @@
         android:layout_below="@id/tvCaption2"
         android:layout_alignStart="@id/tvCaption2"
         android:text="timestamp"/>
-
 </RelativeLayout>
