--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -3,15 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_marginTop="20dp"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignStart="@id/ivImage"
+        android:layout_marginTop="5dp"
         android:layout_margin="5dp"
-        android:layout_above="@id/ivImage"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_alignParentTop="true"
         app:srcCompat="@drawable/instagram_user"/>
 
     <TextView
@@ -28,18 +32,16 @@
 
     <ImageView
         android:id="@+id/ivImage"
-        android:layout_width="379dp"
-        android:layout_height="368dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_below="@id/ivProfileImage"
         android:layout_marginBottom="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
+        android:layout_alignParentStart="true"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/placeholder" />
 
     <TextView
         android:id="@+id/tvCaption"
