Added handle next to caption on timeline and details view

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -49,8 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/ivImage2"
         android:layout_alignStart="@id/ivImage2"
-        android:layout_margin="5dp"
-        android:text="caption"/>
+        android:layout_margin="5dp"/>
 
     <TextView
         android:id="@+id/tvTimeStamp2"
