--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -56,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvCaption2"
-        android:layout_alignStart="@id/tvCaption2"
+        android:layout_alignStart="@id/ivImage2"
+        android:layout_marginLeft="5dp"
         android:text="timestamp"/>
 </RelativeLayout>
