--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -27,7 +27,9 @@
         android:layout_toEndOf="@id/ivProfileImage"
         android:layout_above="@id/ivImage"
         android:layout_toRightOf="@id/ivProfileImage"
-        android:text="handle"/>
+        android:text="handle"
+        android:textSize="16dp"
+        android:textColor="@color/black"/>
 
 
     <ImageView
@@ -37,7 +39,6 @@
         android:layout_centerVertical="true"
         android:layout_below="@id/ivProfileImage"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
         android:layout_alignParentStart="true"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
@@ -49,7 +50,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/heart"
         android:layout_alignStart="@id/ivImage"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:textSize="16dp"
+        android:textColor="@color/black"/>
 
     <TextView
         android:id="@+id/tvTimeStamp"
@@ -58,12 +61,15 @@
         android:layout_below="@id/tvCaption"
         android:layout_alignStart="@id/ivImage"
         android:layout_marginLeft="5dp"
-        android:text="timestamp"/>
+        android:textColor="@color/grey_5"
+        android:text="timestamp"
+        android:textAllCaps="true"
+        android:textSize="10dp"/>
 
     <ImageView
         android:id="@+id/heart"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_below="@id/ivImage"
         android:layout_alignStart="@id/ivImage"
         android:layout_marginLeft="10dp"
@@ -73,19 +79,19 @@
 
     <ImageView
         android:id="@+id/comment"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_below="@id/ivImage"
         android:layout_toRightOf="@id/heart"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         app:srcCompat="@drawable/ufi_comment"/>
 
     <ImageView
         android:id="@+id/dm"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_below="@id/ivImage"
         android:layout_toRightOf="@id/comment"
         android:layout_marginLeft="10dp"
@@ -95,8 +101,8 @@
 
     <ImageView
         android:id="@+id/save"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_below="@id/ivImage"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="10dp"
@@ -104,6 +110,12 @@
         android:layout_marginBottom="5dp"
         app:srcCompat="@drawable/ic_save"/>
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="5dp"
+        android:layout_above="@id/ivImage"
+        android:background="@color/grey_4" />
 
 </RelativeLayout>
