Improved camera fragment

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -49,7 +49,7 @@
         android:id="@+id/tvCaption2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivImage2"
+        android:layout_below="@id/heart"
         android:layout_alignStart="@id/ivImage2"
         android:layout_margin="5dp"
         android:textSize="16dp"
@@ -66,4 +66,48 @@
         android:textAllCaps="true"
         android:textColor="@color/grey_5"
         android:textSize="10dp"/>
+
+    <ImageView
+        android:id="@+id/heart"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@id/ivImage2"
+        android:layout_alignStart="@id/ivImage2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:srcCompat="@drawable/ic_heart"/>
+
+    <ImageView
+        android:id="@+id/comment"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@id/ivImage2"
+        android:layout_toRightOf="@id/heart"
+        android:layout_marginLeft="13dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:srcCompat="@drawable/ufi_comment"/>
+
+    <ImageView
+        android:id="@+id/dm"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_below="@id/ivImage2"
+        android:layout_toRightOf="@id/comment"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:srcCompat="@drawable/ufi_new_direct"/>
+
+    <ImageView
+        android:id="@+id/save"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@id/ivImage2"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        app:srcCompat="@drawable/ic_save"/>
 </RelativeLayout>
