--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -15,6 +15,7 @@
     <android.support.design.widget.BottomNavigationView
         android:id = "@+id/bottom_nav"
         android:layout_width="match_parent"
+        app:itemBackground="@color/white"
         android:layout_height="wrap_content"
         android:background="@color/blur_mask_tint_color"
         app:layout_constraintBottom_toBottomOf="parent"
