Implemented search tab on bottom navigation bar

--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -29,7 +29,8 @@
         android:layout_toRightOf="@id/ivProfileImage2"
         android:text="handle"
         android:textSize="16dp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
 
     <ImageView
